react-native-windows version bump

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "keymirror": "0.1.1",
-    "react-native-windows": "0.41.0-rc.0"
+    "react-native-windows": "^0.43.0-rc.0"
   },
   "scripts": {
     "test": "node_modules/.bin/eslint *.js"
